resolve copilot findings